--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
         "aws/aws-sdk-php": "^3.155",
         "bref/laravel-bridge": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "illuminate/http": "^8.0|^9.0",
-        "illuminate/support": "^8.0|^9.0"
+        "illuminate/http": "^9.0",
+        "illuminate/support": "^9.0"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0"
