--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "type": "library",
     "require": {
         "php": "^8.0",
-        "illuminate/http": "^9.0|^10.0"
+        "illuminate/http": "^9.0|^10.0|^11.0"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0"
