--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
     "type": "library",
     "require": {
         "php": "^8.0",
-        "illuminate/http": "^9.0|^10.0|^11.0"
+        "illuminate/http": "^9.0|^10.0|^11.0|^12.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0"
+        "orchestra/testbench": "^6.0|^7.0|^8.0|^9.0|^10.0"
     },
     "autoload": {
         "psr-4": {
